--- a/data/blogs/nextjs_middleware_authorization_bypass.mdx
+++ b/data/blogs/nextjs_middleware_authorization_bypass.mdx
@@ -11,7 +11,7 @@ authorQuote: "Stay Vigilant, Stay Secure"
 
 ![CVE-2025-29927](/assets/img/blog/nextjs_blog.png)
 
-### CVE-2025-2401: Unsafe Deserialization in Wazuh – RCE
+### CVE-2025-29927: Next.js Middleware Authorization Bypass
 
 ### Description
 Next.js, an open-source web framework developed by Vercel, powers modern React-based applications with advanced features like server-side rendering and static site generation. Recently, a critical vulnerability (CVE-2025-29927) was uncovered, allowing attackers to bypass middleware-based authorization checks. This flaw was initially discovered and analyzed by Rachid Allam (zhero). In this post, we’ll dive into the technical details of the vulnerability, explore Rachid’s research, and craft a Nuclei template to help you detect this issue across your environment.
