--- a/data/blogs/nextjs_middleware_authorization_bypass.mdx
+++ b/data/blogs/nextjs_middleware_authorization_bypass.mdx
@@ -29,7 +29,7 @@ By exploiting this flaw, an attacker can completely bypass middleware logic simp
 - **CVSSv3.1 Vector**: `CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:H/I:H/A:N`  
 - **Affected Component**: Middleware  
 - **Attack Vector**: Network  
-- **Privileges Required**: Low (API Access)  
+- **Privileges Required**: Low 
 - **User Interaction**: None  
 - **Scope**: Unchanged  
 
