modulerize services adn portfolio with md
make services and portfolio dynamic routes and enable md rendering

--- a/data/services/information-security-compliance/cloud-security-audits.mdx
+++ b/data/services/information-security-compliance/cloud-security-audits.mdx
@@ -13,17 +13,27 @@ cards:
 portfolioLink: "/our-portfolio/cloud"
 ---
 
+
+![Cloud Security Audits](/assets/img/service/s2_1.jpg)
+
+## Cloud Security Audits
+
 Cloud infrastructure can be vulnerable if not properly secured. Our cloud security audits identify weaknesses and recommend solutions.
+
 
 From configuration issues to identity management, we ensure your cloud environment follows best practices for security.
 
-## Securing Your Cloud
+### Securing Your Cloud
 
 With the increasing use of cloud services, maintaining security is essential to protect sensitive data and prevent unauthorized access.
 
-## Our Audit Process
+![Cloud Security Audits](/assets/img/service/s2_2.jpg)
+
 
 We assess your cloud environment for misconfigurations, vulnerabilities, and compliance gaps.
+
+
+## Our Audit Process
 
 Our experts offer step-by-step guidance on securing your cloud infrastructure, focusing on areas like access control and data encryption.
 
