add nav for porfolio, theme change
change video to youtube iframe, fix nav for porfolio items, change theme for portfolio, fix active nav for mobile and desktop

--- a/data/portfolio/pd/brand-identity-design-for-viva-fintech.mdx
+++ b/data/portfolio/pd/brand-identity-design-for-viva-fintech.mdx
@@ -1,6 +1,6 @@
 ---
 id: 102
-imageSrc: "/assets/img/portfolio/portfolio-pd/viva102_1.png"
+imageSrc: "/assets/img/portfolio/portfolio-pd/Main Frame.png"
 itemsImages:
   - "/assets/img/portfolio/portfolio-pd/Main Frame.png"
   - "/assets/img/portfolio/portfolio-pd/Background.png"
