adds service mdx images

--- a/data/services/branding-logo-design/brand-identity-design.mdx
+++ b/data/services/branding-logo-design/brand-identity-design.mdx
@@ -18,6 +18,8 @@ portfolioLink: "/our-portfolio/pd"
 button: [""]
 ---
 
+![Cloud Security Audits](/assets/img/service/Frame3.jpg)
+
 Our expert team creates powerful visual identities that leave lasting impressions. We collaborate with brands to craft logos, typography, and color schemes that represent their unique personality.
 
 We've helped brands stand out in competitive markets with visually striking and cohesive identities that resonate with audiences.
@@ -26,6 +28,8 @@ We've helped brands stand out in competitive markets with visually striking and 
 
 You’ve got the passion, the ideas, and the drive. But when it comes to your brand… something feels off. Maybe your visuals don’t align with the energy you want to project. Or your story gets lost in translation. You see the disconnect—and so does your audience.  
 And here’s the hard truth: when your brand doesn’t match your vision, it’s not just frustrating—it’s costing you opportunities. That is exactly what we'll help you to avoid by using our crafted process below.
+
+![Cloud Security Audits](/assets/img/service/src.jpg)
 
 ## Here’s What You’ll Get
 
