--- a/data/services/branding-logo-design/ui-ux-design.mdx
+++ b/data/services/branding-logo-design/ui-ux-design.mdx
@@ -18,11 +18,15 @@ portfolioLink: ""
 button: [""]
 ---
 
+![Cloud Security Audits](/assets/img/service/uxui2.jpg)
+
 Great design is more than just aesthetics. We focus on creating intuitive, user-centered interfaces that provide seamless experiences. From wireframes to final design, we ensure every element serves a purpose and enhances the user journey.
 
 ## Why Experience Matters
 
 In the digital world, your user experience is your brand. A clunky interface or a confusing flow doesn’t just frustrate users—it drives them away. But when your design is seamless, intuitive, and downright enjoyable? That’s when the magic happens. We specialize in creating digital experiences that feel effortless. From eye-catching interfaces to user-friendly navigation, our designs are rooted in understanding your audience and keeping them engaged.
+
+![Cloud Security Audits](/assets/img/service/s4_2.jpg)
 
 ## Does This Sound Like You?
 
