--- a/data/services/web-mobile-development/devsecops.mdx
+++ b/data/services/web-mobile-development/devsecops.mdx
@@ -13,6 +13,8 @@ cards:
 portfolioLink: ""
 ---
 
+![Cloud Security Audits](/assets/img/service/s6_1.jpg)
+
 Incorporating security into the development process is crucial for building secure applications. Our DevSecOps services automate security checks and ensure your code is safe from vulnerabilities.
 
 ## Why DevSecOps Matters
