--- a/data/services/web-mobile-development/web-mobile-app-development.mdx
+++ b/data/services/web-mobile-development/web-mobile-app-development.mdx
@@ -13,11 +13,15 @@ cards:
 portfolioLink: ""
 ---
 
+![Cloud Security Audits](/assets/img/service/s5_1.jpg)
+
 Our development team builds high-performing, scalable web and mobile applications that help your business thrive. From ideation to deployment, we handle every aspect of the development process with a focus on quality and innovation.
 
 ## Custom Solutions for Your Business
 
 We understand that every business is unique, which is why we tailor our development services to meet your specific needs.
+
+![Cloud Security Audits](/assets/img/service/s5_1.jpg)
 
 ## Our Development Process
 
